// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render link preview 1`] = `
<div>
  <form
    className="ui form column massive separator"
    noValidate={undefined}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="field"
    >
      <div
        className="ui action input"
      >
        <input
          autoComplete="off"
          className="field-input"
          disabled={false}
          id="link"
          name="linkForm.linkURL"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          placeholder="Past your original url"
          type="text"
          value=""
        />
        <button
          className="ui button"
          type="submit"
        >
          Go !
        </button>
      </div>
    </div>
  </form>
  <div
    className="ui buttons"
  >
    <a
      className="ui button"
      href="/link/anId"
      target="_blank"
    >
      <i
        className="external alternate icon"
      />
      /link/anId
    </a>
    <div
      className="or"
    />
    <button
      className="ui vertical green button"
      onClick={[Function]}
    >
      Copy
    </button>
  </div>
</div>
`;

exports[`Render loading icon on fetch 1`] = `
<div
  className="loader"
>
  <img
    alt=""
    height="60"
    src="loader.svg"
    width="60"
  />
</div>
`;

exports[`Render main 1`] = `
<div>
  <form
    className="ui form column massive separator"
    noValidate={undefined}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="field"
    >
      <div
        className="ui action input"
      >
        <input
          autoComplete="off"
          className="field-input"
          disabled={false}
          id="link"
          name="linkForm.linkURL"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          placeholder="Past your original url"
          type="text"
          value=""
        />
        <button
          className="ui button"
          type="submit"
        >
          Go !
        </button>
      </div>
    </div>
  </form>
</div>
`;
